--- a/Resume/main.tex
+++ b/Resume/main.tex
@@ -150,63 +150,46 @@
 \section{Experience}
   \vspace{3pt}
   \resumeSubHeadingListStart
-    
-    \resumeSubheading
-      {\resumeCompanyLogo{coinbase}}{Coinbase}{Remote / San Francisco, California}
-      {Product Manager (started as Software Engineer)}{Feb 2020 \textbf{--} Jun 2022}
+  
+      \resumeSubheadingSimple
+      {Alpha Labs}
+      {San Francisco, California}
+      {Cofounder}{April 2018 \textbf{--} Present}
         \resumeItemListStart
-            \resumeItem{\textbf{Pitched and built a new product (Coinbase Pay)} to the executive team; from ideation to design to implementation}
-            \resumeItem{Tech lead for feature that allowed instant withdrawals using debit cards}
-            \resumeItem{Contributed to release of Paypal and Apple Pay support}
+            \resumeItem{Worked with the Cool Cats team to release NFTs that did \$9m in total trading volume; trended \#1 on OpenSea.}
+            \resumeItem{Launched Megapot on Blast L2 and got 1000s of transactions and \$150K of liquidity locked in it.}
+            \resumeItem{Launched Virtuoso Club on Base L2 and got 100s of users playing around with it. Got a grant from Coinbase.}
         \resumeItemListEnd
     
-    \resumeSubheading
-      {\faRocket}{Early-stage Startups}{San Francisco, California}
-      {Entreprenuer / Software Engineer}{Feb 2018 \textbf{--} Dec 2019}
+    \resumeSubheadingSimple
+      {Coinbase}
+      {Remote}
+      {Product Manager}{Feb 2020 \textbf{--} Jun 2022}
         \resumeItemListStart
-            \resumeItem{\textbf{Attempted to build a crypto wallet} which had multi-sig capabilities; struggled with product-market fit}
-            \resumeItem{Freelanced for a startup that provided services as guarantors for renters in NY}
-            \resumeItem{Worked at a series-A startup that built infrastructure billing abilities to monitor spend in AWS}
+            \resumeItem{Started off as SWE but shifted to a PM role for my contributions on product}
+            \resumeItem{Tech lead for instant withdrawals using debit cards and contributed to release of Paypal and Apple Pay}
+            \resumeItem{Pitched Coinbase Onramp to Brian Armstrong and other execs; brought it from an idea to life}
+            \resumeItem{Worked closely with product/eng directors and got a glimpse of responsibilities at senior leadership roles}
         \resumeItemListEnd
     
-    \resumeSubheading
-      {\resumeCompanyLogo{aws}}{Amazon}{Seattle, Washington}
-      {Software Development Engineer}{Jan 2017 \textbf{--} Feb 2018}
+    \resumeSubheadingSimple
+      {Amazon Web Services}
+      {Seattle, Washington}
+      {Backend Engineer}{Jan 2017 \textbf{--} Feb 2018}
         \resumeItemListStart
-            \resumeItem{Part of the Continuous Delivery org in Amazon Web Services}
-            \resumeItem{\textbf{Built automated dashboard building capabilities in Infrastructure-as-Code tool} used by internal teams at Amazon}
-            \resumeItem{Fixes in the domain of deployment pipelines; monitors; and provisioning instances}
+            \resumeItem{Helped automate CI/CD pipelines with in-house IaaC tooling}
+            \resumeItem{Enabled 20+ teams internally to build automated dashboards leveraging existing encoded metrics}
         \resumeItemListEnd
     
-    \resumeSubheading
-      {\resumeCompanyLogo{microsoft}}{Microsoft}{Copenhagen, Denmark}
-      {Software Development Engineer}{Jul 2015 \textbf{--} Dec 2016}
+    \resumeSubheadingSimple
+      {Microsoft}
+      {Copenhagen, Denmark}
+      {SDE I}{Jul 2015 \textbf{--} Dec 2016}
         \resumeItemListStart
-            \resumeItem{Worked on ERP product (Dynamics AX) with focus on supply chain}
-            \resumeItem{Fixed in inventory management; procurement and sales}
-            \resumeItem{\textbf{Built data entities to allow easy migrations} when upgrading software}
+            \resumeItem{Won an award for my contributions towards Dynamics AX 7}
         \resumeItemListEnd
     
     \resumeSubHeadingListEnd
-
-
-%-----------EDUCATION-----------
-
-\section{Education}
-  \vspace{3pt}
-  \resumeSubHeadingListStart
-    
-    \resumeSubheading
-       {\resumeCompanyLogo{jub}}{Jacobs University}
-      {Bremen, Germany}
-      {Bachelor of Science in Computer Science;   \textbf{GPA: 2.2/5.0 (German scale)}}{Graduated 2014}
-      \resumeItemListStart
-        \resumeItem{Specialized in Computational Logic and Computer Vision}
-        \resumeItem{Trans-disciplinary courses in psychology, politics, music, geology, and law.}
-      \resumeItemListEnd
-            
-  \resumeSubHeadingListEnd
-
 
 
 %-----------CERTIFICATES-----------
@@ -214,31 +197,45 @@
 \section{Certificates}
   \resumeSubHeadingListStart
    
+     \resumeSubheadingSimple
+      {OnDeck}
+      {Remote}
+      {Fellowship for Early-Stage Founders}{Aug 2022}
+      \resumeItemListStart
+        \resumeItem{Completed a program that helps you figure out next steps in your career}
+        \resumeItem{Trainings range from navigating idea maze to building prototypes to fund-raising }
+      \resumeItemListEnd
+   
     \resumeSubheadingSimple
       {Product School}
       {Remote}
       {Product Manager Certificate}{Issued March 2021}
       \resumeItemListStart
-        \resumeItem{8-week course that prepares students to successfully build software products with a team of designers and engineers.}
-        \resumeItem{Students learn from real-world Product Managers at top tech companies such as Google, Facebook, LinkedIn, and Twitter.}
+        \resumeItem{8-week course that prepares students to understand product complexities}
+        \resumeItem{Students are expected to write a PRD that covers user profiles, market segments, design and a lot more.}
       \resumeItemListEnd
     
   \resumeSubHeadingListEnd
   
-  
-  
-%-----------FUN PROJECTS-----------
+%-----------EDUCATION-----------
 
-\section{Fun Projects}
+\section{Education}
   \vspace{3pt}
   \resumeSubHeadingListStart
-    \small{\item{
-        \textbf{LightTube:}{ Bitcoin-based video streaming service \hfill \texttt{http://light-tube.surge.sh/}}  \\ \vspace{2pt}
-        \textbf{Addr:}{ React Native app which is a Bitcoin wallet with multi-sig \hfill \texttt{https://github.com/uneeb123/AddrApp}}  \\ \vspace{2pt}
-        \textbf{Radd:}{ Vue-based application that creates Gantt charts for project management \hfill \texttt{https://github.com/uneeb123/Radd}}
-    }}
- \resumeSubHeadingListEnd
+    
+    \resumeSubheading
+       {\resumeCompanyLogo{jub}}{Jacobs University Bremen}
+      {Bremen, Germany}
+      {Bachelor of Science in Computer Science}{Graduated 2014}
+      \resumeItemListStart
+        \resumeItem{Wrote my thesis on unsupervised learning exploring augmented Mean Shift algorithm}
+        \resumeItem{Graduated in the top quartile of the class}
+        \resumeItem{Trans-disciplinary courses in psychology and politics}
+      \resumeItemListEnd
+            
+  \resumeSubHeadingListEnd
 
+  
 
 
 %-----------MISCELLANEOUS-----------
@@ -248,10 +245,8 @@
   \resumeSubHeadingListStart
     \small{\item{
         \textbf{Technical writing:}{ \texttt{https://medium.com/@uneeb123}} \\ \vspace{2pt}
-        \textbf{Substack newsletter:}{ \texttt{https://www.cryptechie.com/} } \\ \vspace{2pt}
-        \textbf{Programming:}{ JavaScript, Go, Ruby, Java} \\ \vspace{2pt} 
-        \textbf{Languages:}{ Urdu (Native), English (Professional), German (Limited)} \\ \vspace{2pt}
-        \textbf{Work Authorization:}{ U.S Permanent Resident (soon to be citizen)}
+        \textbf{Programming:}{ JavaScript, Solidity, Ruby, Java} \\ \vspace{2pt} 
+        \textbf{Work Authorization:}{ U.S National}
         % \textbf{Frameworks}{: X, X, X} \\
         % \textbf{Developer Tools}{: X, X, X} \\
         % \textbf{Libraries}{: X, X, X} \\
